--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -12,8 +12,8 @@
     <tbody>
       <tr *ngFor="let user of users">
         <td class="hidden">{{user.id}}</td>
-        <td>{{user.firstName}}</td>
-        <td>{{user.lastName}}</td>
+        <td>{{user.name}}</td>
+        <td>{{user.username}}</td>
         <td>{{user.email}}</td>
       </tr>
     </tbody>
